--- a/templates/home.html
+++ b/templates/home.html
@@ -3,44 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
-                    <img src="img/dice-d20-solid2.svg" alt="Logo" width="40" height="32">
-                    Exemplo
-                  </a>              
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="">Iniciar Campanha</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="">Minhas Aventuras</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="">Meus Personagens</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="">Configurações</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
+
 
     <div id="background1" class="">
-        <div id="textobg1box" class="">
-            <p id="textobg1">Bem-vindo, {user}!</p>
+
+        <header>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary navbarhome">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="/home">
+                        <img src="img/dice-d20-solid2.svg" alt="Logo" width="40" height="32">
+                        Exemplo
+                      </a>              
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="">Iniciar Campanha</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="">Minhas Aventuras</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="">Meus Personagens</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="">Configurações</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('logout') }}">Sair</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+        </header>
+
+
+        <div id="textobg1box" class="center textobg1boxhome">
+            <p id="textobg1">Bem-vindo, {{usuario}}!</p>
             <p id="textobg1desc">Explore novas aventuras ou retorne à sua campanha agora mesmo.</p>
             <div id="buttons">
                 <a href="" class="btn">Iniciar Campanha</a>
@@ -97,7 +104,7 @@
             <div class="chat-container">
                 <div id="mensagemContainer" class="mensagemContainer">
                     <div class="mensagem mensagem-sistema p-2 mb-3">
-                        Bem vindo {user}! Use este espaço para interagir com o bot, aqui você pode consultar regras, pedir dicas, curiosidades e mais!
+                        Bem vindo {{usuario}}! Use este espaço para interagir com o bot, aqui você pode consultar regras, pedir dicas, curiosidades e mais!
                     </div>
                 </div>
                 
@@ -143,9 +150,13 @@
           <a href="#">Voltar ao topo</a>
         </p>
 
-
-
-
+        <script>
+            document.querySelector('.navbar-toggler').addEventListener('click', function () {
+            const navbar = document.querySelector('.navbarhome');
+            const expanded = this.getAttribute('aria-expanded') === 'true';
+            navbar.setAttribute('aria-expanded', expanded);
+            });
+        </script>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </footer>
