--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,16 @@
 <body>
 
 
-    <div id="background1" class="">
+    <div id="background3" class="">
+
+      <!-- <div id="background3video">
+        <video autoplay muted loop id="background-video">
+            <source src="../img/background3.mp4" type="video/mp4">
+            Seu navegador não suporta o elemento de vídeo.
+        </video>
+      </div> -->
+
+
       <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary ">
             <div class="container-fluid ">
