--- a/templates/configuracoes.html
+++ b/templates/configuracoes.html
@@ -10,39 +10,103 @@
 <body>
 
 
+
+                      <!-- captura a variavel 'erro2' declarada no app.py em caso de erro -->
+                      {% if erro2 %}
+                      <div id="alerta" class="alerta" role="alert">
+                      {{ erro2 }}
+                      </div>
+                      {% endif %}
+                      
+                      <!-- captura a variavel 'sucesso2' declarada no app.py em caso de sucesso1 -->
+                      {% if sucesso2 %}
+                      <div id="sucesso1" class="sucesso1" role="alert">
+                      {{ sucesso2 }}
+                      </div>
+                      {% endif %}
+
+                      <!-- captura a variavel 'errofoto' declarada no app.py em caso de errofoto -->
+                      {% if errofoto %}
+                      <div id="alerta" class="alerta" role="alert">
+                      {{ errofoto }}
+                      </div>
+                      {% endif %}
+  
+                      <!-- captura a variavel 'erroformato' declarada no app.py em caso de erroformato -->
+                      {% if erroformato %}
+                      <div id="alerta" class="alerta" role="alert">
+                      {{ erroformato }}
+                      </div>
+                      {% endif %}
+  
+                      <!-- captura a variavel 'sucessofoto' declarada no app.py em caso de sucessofoto -->
+                      {% if sucessofoto %}
+                      <div id="sucesso1" class="sucesso1" role="alert">
+                      {{ sucessofoto }}
+                      </div>
+                      {% endif %}
+
+
+
     <div id="background2" class="">
 
         <header>
             <nav class="navbar navbar-expand-lg bg-body-tertiary navbarhome">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="/home">
-                        <img src="img/dice-d20-solid2.svg" alt="Logo" width="40" height="32">
+                    <a class="navbar-brand nav-link" href="/home" style="display: flex; align-items: center;">
+
+                        <div class="logo-container">
+                            <img src="img/dice-d20-solid2.svg" alt="Logo" width="40" height="32" class="logo normal">
+                            <img src="img/dice-d20-solid3.svg" alt="Logo" width="40" height="32" class="logo hover">
+                            
+                        </div>
                         Exemplo
-                      </a>              
+                    </a>              
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link" href="">Iniciar Campanha</a>
+                        <a class="nav-link" href="">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="60" height="20" fill="currentColor" class="bi bi-chevron-right chevron" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
+                          </svg>
+                          Iniciar Campanha
+                        </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="">Minhas Aventuras</a>
+                        <a class="nav-link" href="">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="60" height="20" fill="currentColor" class="bi bi-chevron-right chevron" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
+                          </svg>Minhas Aventuras</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="">Meus Personagens</a>
+                        <a class="nav-link" href="">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="60" height="20" fill="currentColor" class="bi bi-chevron-right chevron" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
+                          </svg>Meus Personagens</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ url_for('configuracoes') }}">Configurações</a>
+                        <a class="nav-link active" aria-current="page" href="{{ url_for('configuracoes') }}">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="60" height="20" fill="currentColor" class="bi bi-chevron-right chevron" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
+                          </svg>Configurações</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('logout') }}">Sair</a>
+                        <a class="nav-link" href="{{ url_for('logout') }}">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="60" height="20" fill="currentColor" class="bi bi-chevron-right chevron" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
+                          </svg>Sair</a>
                       </li>
                     </ul>
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('configuracoes') }}">{{usuario}}</a>
+                    <!-- Display de nome e foto de usuario -->
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item" style="display: flex; align-items: center;">
+                          <a href="{{ url_for('configuracoes') }}">
+                            <img id="fotoperfilmini" class="fotoperfilmini" src="{{ fotoperfil if fotoperfil else 'https://ui-avatars.com/api/?name=' + usuario }}" alt="Foto de perfil atual" >
+                          </a>                  
+                          <a class="nav-link" href="{{ url_for('configuracoes') }}">{{usuario}}</a>
                         </li>
                     </ul>
                   </div>
@@ -64,18 +128,7 @@
                         </h5>
                     </div>
 
-                    <!-- captura a variavel 'erro2' declarada no app.py em caso de erro -->
-                    {% if erro2 %}
-                    <div id="alerta" class="alerta" role="alert">
-                    {{ erro2 }}
-                    </div>
-                    {% endif %}
-                    <!-- captura a variavel 'sucesso2' declarada no app.py em caso de sucesso1 -->
-                    {% if sucesso2 %}
-                    <div id="sucesso1" class="sucesso1" role="alert">
-                    {{ sucesso2 }}
-                    </div>
-                    {% endif %}
+
 
                     <!-- Form para alterar nome de usuario -->
                     <form action="{{ url_for('alterar_nome') }}" method="POST" class="configform">
@@ -92,26 +145,7 @@
 
 
 
-                    <!-- captura a variavel 'errofoto' declarada no app.py em caso de errofoto -->
-                    {% if errofoto %}
-                    <div id="alerta" class="alerta" role="alert">
-                    {{ errofoto }}
-                    </div>
-                    {% endif %}
 
-                    <!-- captura a variavel 'erroformato' declarada no app.py em caso de erroformato -->
-                    {% if erroformato %}
-                    <div id="alerta" class="alerta" role="alert">
-                    {{ erroformato }}
-                    </div>
-                    {% endif %}
-
-                    <!-- captura a variavel 'sucessofoto' declarada no app.py em caso de sucessofoto -->
-                    {% if sucessofoto %}
-                    <div id="sucesso1" class="sucesso1" role="alert">
-                    {{ sucessofoto }}
-                    </div>
-                    {% endif %}
 
                     <!-- Form para alterar imagem de perfil -->
                     <form action="/uploadfoto" method="POST" enctype="multipart/form-data" class="configform">
@@ -119,15 +153,15 @@
                             <label for="fotoperfil" class="form-label">Escolha uma nova foto de perfil: </label>
                             <div class="profile-container">
                                 <!-- Exibe a imagem armazenada no banco de dados -->
-                                <img id="fotoperfilatual" class="fotoperfil" src="https://via.placeholder.com/150" alt="Foto de perfil atual">
+                                <img id="fotoperfilselecionada" class="fotoperfil" src="https://via.placeholder.com/150" alt="Foto de perfil selecionada">
                             </div>                                
                             <input type="file" class="form-control" id="fotoperfil" name="fotoperfil" accept="image/*" required> 
                             <input type="hidden" id="hidden-input" name="profile-picture-hidden">
                         </div>
-                        <div class="mb-3">
+                        <!-- <div class="mb-3">
                           <label for="senha" class="form-label">Senha</label>
                           <input type="password" class="form-control" id="senha" name="senha" required placeholder="Digite sua senha">
-                        </div>
+                        </div> -->
                         <button type="submit" class="btn btn-primary">Enviar</button>
                     </form>
                 </div>
@@ -163,7 +197,7 @@
         <p class="mb-0">
           <a href="#">Voltar ao topo</a>
         </p>
-
+        <!-- Adiciona estilo unico quando a navbar estende -->
         <script>
             document.querySelector('.navbar-toggler').addEventListener('click', function () {
             const navbar = document.querySelector('.navbarhome');
@@ -171,10 +205,12 @@
             navbar.setAttribute('aria-expanded', expanded);
             });
         </script>
+
+        
         <!-- Script para exibir a imagem de perfil  -->
         <script> 
             const fileInput = document.getElementById('fotoperfil');
-            const currentProfilePicture = document.getElementById('fotoperfilatual');
+            const selectedProfilePicture = document.getElementById('fotoperfilselecionada');
             const hiddenInput = document.getElementById('hidden-input');
         
             // Atualiza o círculo com a imagem selecionada
@@ -183,7 +219,7 @@
               if (file) {
                 const reader = new FileReader();
                 reader.onload = function() {
-                  currentProfilePicture.src = reader.result;
+                  selectedProfilePicture.src = reader.result;
                 };
                 reader.readAsDataURL(file);
               }
