--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,11 +29,67 @@ header .navbar {
     
 }
 
-.navbar-nav .nav-link:hover {
+
+
+.logo-container {
+    position: relative;
+    width: 40px; /* Largura do logo */
+    height: 40px; /* Altura do logo */
+    display: inline-block; /* Impede que afete outros elementos inline */
+    margin-right: 10px; /* Espaço entre logo e texto */
+}
+
+
+
+.logo{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 40px;
+    height: 40px;
+    transition: opacity 0.3s ease;
+}
+
+.navbar-brand .logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 40px;
+    height: 40px;
+    transition: opacity 0.3s ease;
+}
+
+.logo.hover {
+    opacity: 0;
+}
+
+.logo-container:hover .logo.normal {
+    opacity: 0;
+}
+
+.logo-container:hover .logo.hover {
+    opacity: 1;
+}
+
+
+
+.nav-link:hover {
     color: #D32430 !important;
     font-weight: bold;
 }
 
+.chevron {
+    margin-left: 10px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+
+
+}
+
+.chevron:hover {
+    color: #D32430 !important;
+    font-weight: bold;
+}
 
 .navbar-toggler {
     background-color: #00000050;
@@ -46,6 +102,17 @@ header .navbar {
 
 .navbar-toggler:hover {
     background-color: #f8d6b550;
+}
+
+.navbarhome {
+    background: 
+        linear-gradient(
+            to bottom,
+            rgba(0, 0, 0, 0.788),
+            rgba(0,0,0,0)
+        );
+    background-blend-mode: multiply;
+
 }
 
 .navbarhome[aria-expanded="true"] {
@@ -129,6 +196,8 @@ header .navbar {
 
 .textobg1boxhome{
     margin-top: 9.5rem;
+    backdrop-filter: blur(4px);
+
 }
 
 
@@ -192,6 +261,24 @@ header .navbar {
     
 }
 
+.fotoperfilmini {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: 2px solid #F8D5B5;
+    object-fit: cover;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+   transition: box-shadow 0.3s ease;
+}
+
+.fotoperfilmini:hover {
+    /* box-shadow: 0 0 0 5px rgba(0, 0, 0, 0.212); */
+    border: 4px solid #F8D5B5;
+}
+
 .profile-container {
     display: flex;
     flex-direction: column;
@@ -200,7 +287,7 @@ header .navbar {
 
 
 #textobg1{
-    color: #F8D5B5;
+    color: #F8D5B5 !important;
     margin-bottom: 10px;
     font-weight: 700;
     font-size: 42px;
@@ -334,6 +421,7 @@ footer{
     max-width: 600px;
     margin-left: auto;
     margin-right: auto; 
+    backdrop-filter:blur(10px);
 }
 
 #signup-container h2 {
@@ -413,8 +501,8 @@ footer{
     bottom: -100px; /* Começa fora da tela */
     left: 50%;
     transform: translateX(-50%);
-    background-color: #ff4444;
-    color: white;
+    background-color: #942626;
+    color: #F8D5B5;
     padding: 15px 25px;
     border-radius: 8px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
@@ -429,7 +517,7 @@ footer{
     left: 50%;
     transform: translateX(-50%);
     background-color: #235f1e;
-    color: white;
+    color: #F8D5B5;
     padding: 15px 25px;
     border-radius: 8px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
